# agentic-anki

./: .gitignore  README.md  pyproject.toml
src/anki_pipeline/: __init__.py  config.py  enums.py  identity.py  models.py  normalize.py  prompt_registry.py  storage.py  terminal_math.py
src/anki_pipeline/allocation/: __init__.py  filtering.py  scoring.py  selection.py
src/anki_pipeline/config/: item_taxonomy.yaml  pipeline.yaml  ranking.yaml  tag_taxonomy.yaml
src/anki_pipeline/distillation/: __init__.py  chunking.py  extraction.py  grounding.py  ingestion.py
src/anki_pipeline/interfaces/: cli.py
src/anki_pipeline/llm/: client.py  parsing.py  retry.py  schemas.py
src/anki_pipeline/migrations/: 0001_init.sql  0002_attempt_tables.sql  0003_allocation_tables.sql  0004_note_tables.sql  0005_review_export_tables.sql
src/anki_pipeline/retrieval_design/: __init__.py  anki_connect.py  export.py  review.py  synthesis.py  validation.py
src/anki_pipeline/runs/: __init__.py  orchestration.py  state.py
tests/: conftest.py
tests/fixtures/: golden_export.tsv  sample_cs.txt  sample_math.md  sample_physics.md
tests/integration/: test_end_to_end.py  test_extraction_llm.py  test_grounding_llm.py  test_synthesis_llm.py
tests/unit/: test_anki_connect.py  test_chunking.py  test_enums.py  test_export.py  test_filtering.py  test_grounding.py  test_identity.py  test_ingestion.py  test_models.py  test_normalize.py  test_prompt_registry.py  test_review.py  test_scoring.py  test_selection.py  test_storage.py  test_synthesis.py  test_terminal_math.py  test_validation.py
(+10 files in other folders)
